<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main2" tools:context="app.ernesto.sqlitev2.Main2Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="@string/action_registrar"
            android:id="@+id/btnRegistrar"
            android:layout_weight="0.01" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="@string/action_modificar"
            android:id="@+id/btnModificar"
            android:layout_weight="0.01"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="@string/action_eliminar"
            android:id="@+id/btnEliminar"
            android:layout_weight="0.01"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="@string/action_Mostrar"
            android:id="@+id/btnMostrar"
            android:layout_weight="0.01"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
